Initial Code of TupleSpace (needs more coding)
Only the skeleton was made, functions aren't implemented yet.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,12 +31,108 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.activemq-all-5.16.0.jar=lib/activemq-all-5.16.0.jar
+file.reference.asm-3.2.jar=lib/asm-3.2.jar
+file.reference.asm-commons-3.2.jar=lib/asm-commons-3.2.jar
+file.reference.browser-dl.jar=lib/browser-dl.jar
+file.reference.browser.jar=lib/browser.jar
+file.reference.checkconfigurationfile.jar=lib/checkconfigurationfile.jar
+file.reference.checkser.jar=lib/checkser.jar
+file.reference.classdep.jar=lib/classdep.jar
+file.reference.classserver.jar=lib/classserver.jar
+file.reference.computedigest.jar=lib/computedigest.jar
+file.reference.computehttpmdcodebase.jar=lib/computehttpmdcodebase.jar
+file.reference.destroy.jar=lib/destroy.jar
+file.reference.envcheck.jar=lib/envcheck.jar
+file.reference.extra.jar=lib/extra.jar
+file.reference.fiddler-dl.jar=lib/fiddler-dl.jar
+file.reference.fiddler.jar=lib/fiddler.jar
+file.reference.group-dl.jar=lib/group-dl.jar
+file.reference.group.jar=lib/group.jar
+file.reference.jarwrapper.jar=lib/jarwrapper.jar
+file.reference.jini-core.jar=lib/jini-core.jar
+file.reference.jini-ext.jar=lib/jini-ext.jar
+file.reference.jsk-debug-policy.jar=lib/jsk-debug-policy.jar
+file.reference.jsk-dl.jar=lib/jsk-dl.jar
+file.reference.jsk-lib.jar=lib/jsk-lib.jar
+file.reference.jsk-platform.jar=lib/jsk-platform.jar
+file.reference.jsk-policy.jar=lib/jsk-policy.jar
+file.reference.jsk-resources.jar=lib/jsk-resources.jar
+file.reference.mahalo-dl.jar=lib/mahalo-dl.jar
+file.reference.mahalo.jar=lib/mahalo.jar
+file.reference.mercury-dl.jar=lib/mercury-dl.jar
+file.reference.mercury.jar=lib/mercury.jar
+file.reference.norm-dl.jar=lib/norm-dl.jar
+file.reference.norm.jar=lib/norm.jar
+file.reference.outrigger-dl.jar=lib/outrigger-dl.jar
+file.reference.outrigger-snaplogstore.jar=lib/outrigger-snaplogstore.jar
+file.reference.outrigger.jar=lib/outrigger.jar
+file.reference.phoenix-dl.jar=lib/phoenix-dl.jar
+file.reference.phoenix-group.jar=lib/phoenix-group.jar
+file.reference.phoenix-init.jar=lib/phoenix-init.jar
+file.reference.phoenix.jar=lib/phoenix.jar
+file.reference.preferredlistgen.jar=lib/preferredlistgen.jar
+file.reference.reggie-dl.jar=lib/reggie-dl.jar
+file.reference.reggie.jar=lib/reggie.jar
+file.reference.sdm-dl.jar=lib/sdm-dl.jar
+file.reference.serviceui.jar=lib/serviceui.jar
+file.reference.sharedvm.jar=lib/sharedvm.jar
+file.reference.start.jar=lib/start.jar
+file.reference.sun-util.jar=lib/sun-util.jar
+file.reference.tools.jar=lib/tools.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.activemq-all-5.16.0.jar}
+    ${file.reference.activemq-all-5.16.0.jar}:\
+    ${file.reference.asm-3.2.jar}:\
+    ${file.reference.asm-commons-3.2.jar}:\
+    ${file.reference.browser.jar}:\
+    ${file.reference.checkconfigurationfile.jar}:\
+    ${file.reference.checkser.jar}:\
+    ${file.reference.classdep.jar}:\
+    ${file.reference.classserver.jar}:\
+    ${file.reference.computedigest.jar}:\
+    ${file.reference.computehttpmdcodebase.jar}:\
+    ${file.reference.destroy.jar}:\
+    ${file.reference.envcheck.jar}:\
+    ${file.reference.extra.jar}:\
+    ${file.reference.fiddler.jar}:\
+    ${file.reference.group.jar}:\
+    ${file.reference.jarwrapper.jar}:\
+    ${file.reference.jini-core.jar}:\
+    ${file.reference.jini-ext.jar}:\
+    ${file.reference.jsk-debug-policy.jar}:\
+    ${file.reference.jsk-lib.jar}:\
+    ${file.reference.jsk-platform.jar}:\
+    ${file.reference.jsk-resources.jar}:\
+    ${file.reference.mahalo.jar}:\
+    ${file.reference.mercury.jar}:\
+    ${file.reference.norm.jar}:\
+    ${file.reference.outrigger-snaplogstore.jar}:\
+    ${file.reference.outrigger.jar}:\
+    ${file.reference.phoenix-group.jar}:\
+    ${file.reference.phoenix-init.jar}:\
+    ${file.reference.phoenix.jar}:\
+    ${file.reference.preferredlistgen.jar}:\
+    ${file.reference.reggie.jar}:\
+    ${file.reference.serviceui.jar}:\
+    ${file.reference.sharedvm.jar}:\
+    ${file.reference.start.jar}:\
+    ${file.reference.sun-util.jar}:\
+    ${file.reference.tools.jar}:\
+    ${file.reference.browser-dl.jar}:\
+    ${file.reference.fiddler-dl.jar}:\
+    ${file.reference.group-dl.jar}:\
+    ${file.reference.jsk-dl.jar}:\
+    ${file.reference.mahalo-dl.jar}:\
+    ${file.reference.mercury-dl.jar}:\
+    ${file.reference.norm-dl.jar}:\
+    ${file.reference.outrigger-dl.jar}:\
+    ${file.reference.phoenix-dl.jar}:\
+    ${file.reference.reggie-dl.jar}:\
+    ${file.reference.sdm-dl.jar}:\
+    ${file.reference.jsk-policy.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
